--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,18 +1,17 @@
 package:
   name: fastq-join
-  version: 1.3.0
+  version: 1.3.1
 build:
   number: 1
 source:
-  fn: fastq-join-1.3.0.tar.gz
-  url: https://github.com/brwnj/fastq-join/archive/v1.02.999.tar.gz
+  fn: fastq-join-1.3.1.tar.gz
+  url: https://github.com/brwnj/fastq-join/archive/v1.3.1.tar.gz
 requirements:
   build:
-    - gcc
   run:
 test:
     commands:
-        - fastq-join
+        - fastq-join -h
 about:
   home: https://github.com/brwnj/fastq-join
   license: MIT
